Correção de códigos

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-cinemavendadeingressos",
+  "name": "tp1-new-structure",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
