--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     },
 
   
-    "include": ["src/**/*", "server.ts", "server.ts"],
+    "include": ["src/*"],
     "exclude": ["node_modules", "**/*.spec.ts"]
   }
